--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.2.10",
     "next": "14.2.4",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.19",
     "next-yup": "^1.1.0",
     "react": "^18",
     "react-dom": "^18",
