--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.2",
     "@tanstack/react-query": "^5.45.1",
     "@tanstack/react-query-devtools": "^5.45.1",
     "axios": "^1.7.2",
@@ -16,6 +17,7 @@
     "framer-motion": "^11.2.10",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
+    "next-themes": "^0.3.0",
     "next-yup": "^1.1.0",
     "react": "^18",
     "react-dom": "^18",
