--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next-yup": "^1.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/node": "^20",
